java/java-tests/testData/codeInsight/daemonCodeAnalyzer/unusedImports/InnersOnDemand2.java
<warning descr="Unused import statement">import <error descr="Cannot resolve symbol 'OuterClass'">OuterClass</error>.*;</warning>

class OuterClass{
  class Inner{}
}


